internal/xds/translator/testdata/out/xds-ir/merge-backends-weighted-mixed.routes.yaml
- ignorePortInHostMatching: true
  name: first-listener
  virtualHosts:
  - domains:
    - '*'
    name: first-listener/*
    routes:
    - match:
        prefix: /
      name: httproute/default/http-route-1/rule/0/match/0/*
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: httproute/default/http-route-1/rule/0/backend/1
            weight: 50
          - name: service/default/service-1/8080/http
            weight: 50
